WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224567
REGRESSION(
r275948
) Wrap sh::ShaderVariable into UniqueRef to fit in HashMap
https://bugs.webkit.org/show_bug.cgi?id=224567
Summary
REGRESSION(r275948) Wrap sh::ShaderVariable into UniqueRef to fit in HashMap
Lauro Moura
Reported
2021-04-14 11:42:15 PDT
REGRESSION(
r275948
) Wrap sh::ShaderVariable into UniqueRef to fit in HashMap
Attachments
[fast-cq] Patch for landing
(5.84 KB, patch)
2021-04-14 11:43 PDT
,
Lauro Moura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Lauro Moura
Comment 1
2021-04-14 11:43:07 PDT
Created
attachment 426025
[details]
[fast-cq] Patch for landing
Lauro Moura
Comment 2
2021-04-14 11:48:10 PDT
Comment on
attachment 426025
[details]
[fast-cq] Patch for landing Missing cq+
Alex Christensen
Comment 3
2021-04-14 12:32:10 PDT
Great! Thanks!
Yusuke Suzuki
Comment 4
2021-04-14 13:09:39 PDT
NICE
EWS
Comment 5
2021-04-14 15:18:15 PDT
Committed
r275976
(
236529@main
): <
https://commits.webkit.org/236529@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 426025
[details]
.
Radar WebKit Bug Importer
Comment 6
2021-04-14 15:19:15 PDT
<
rdar://problem/76668274
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug