REGRESSION(r275948) Wrap sh::ShaderVariable into UniqueRef to fit in HashMap https://bugs.webkit.org/show_bug.cgi?id=224567

Unreviewed build fix.


* platform/graphics/opengl/ExtensionsGLOpenGLCommon.cpp:
(WebCore::ExtensionsGLOpenGLCommon::getTranslatedShaderSourceANGLE):
* platform/graphics/opengl/GraphicsContextGLOpenGL.h:
* platform/graphics/opengl/GraphicsContextGLOpenGLCommon.cpp:
(WebCore::GraphicsContextGLOpenGL::precisionsMatch const):
(WebCore::GraphicsContextGLOpenGL::mappedSymbolInShaderSourceMap):
(WebCore::GraphicsContextGLOpenGL::originalSymbolInShaderSourceMap):
(WebCore::GraphicsContextGLOpenGL::mappedSymbolName):
(WebCore::GraphicsContextGLOpenGL::shaderSource):


Canonical link: https://commits.webkit.org/236529@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275976 268f45cc-cd09-0410-ab3c-d52691b4dbfc